# SoftRendererBook

./: CMake-VS-15-2017.bat  CMakeLists.txt  LICENSE  README.md
Source/Player/: CMakeLists.txt  Precompiled.h  SoftRenderer.cpp  SoftRenderer.h  SoftRenderer2D.cpp  SoftRenderer3D.cpp
Source/Player/Private/Windows/: WindowsApp.cpp  WindowsPlayer.h  WindowsUtil.h
Source/Runtime/Engine/: CMakeLists.txt  Precompiled.h
Source/Runtime/Engine/Private/: Camera2D.cpp  GameEngine.cpp  GameObject2D.cpp  InputManager.cpp  Mesh.cpp  Mesh2D.cpp  QuadTree.cpp  QuadTreeManager.cpp  Texture.cpp  Transform2D.cpp
Source/Runtime/Engine/Private/2D/: Camera.cpp  GameEngine.cpp  GameObject.cpp  Mesh.cpp  Transform.cpp
Source/Runtime/Engine/Private/3D/: Camera.cpp  GameEngine.cpp  GameObject.cpp  Transform.cpp  TransformNode.cpp
Source/Runtime/Engine/Public/: Camera2D.h  EngineHeaders.h  GameEngine.h  GameObject2D.h  InputManager.h  Mesh.h  Mesh2D.h  QuadTree.h  QuadTreeManager.h  Texture.h  Transform2D.h
Source/Runtime/Engine/Public/2D/: Camera.h  GameEngine.h  GameObject.h  Mesh.h  Transform.h
Source/Runtime/Engine/Public/3D/: Bone.h  Camera.h  GameEngine.h  GameObject.h  Mesh.h  Transform.h  TransformNode.h
Source/Runtime/Math/: Precompiled.h
Source/Runtime/Math/Private/: Circle.cpp  Color32.cpp  Frustum.cpp  LinearColor.cpp  Math.cpp  Matrix2x2.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Plane.cpp  Quaternion.cpp  Rectangle.cpp  Rotator.cpp  Sphere.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Source/Runtime/Math/Public/: Circle.h  Color32.h  CoreDefinition.h  Frustum.h  HSVColor.h  LinearColor.h  MathHeaders.h  MathUtil.h  Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  Plane.h  Platform.h  Quaternion.h  Rectangle.h  Rotator.h  ScreenPoint.h  Sphere.h  TransformData.h  Vector2.h  Vector3.h  Vector4.h
Source/Runtime/Renderer/: CMakeLists.txt
Source/Runtime/Renderer/Private/Windows/: WindowsGDI.cpp  WindowsRSI.cpp
Source/Runtime/Renderer/Public/: RendererHeaders.h  RenderingSoftwareInterface.h
Source/Runtime/Renderer/Public/2D/: Vertex.h
(+3 files in other folders)
